--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>This is for git </h2>
     <h4>This is text for check that text is added</h4>
     <h3>New code chnaged</h3>
+    <img src="bg.jpg" alt="" srcset="">
 </body>
 </html>
