add first section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>This is for git </h2>
-    <h4>This is text for check that text is added</h4>
-    <h3>New code chnaged</h3>
-    <img src="bg.jpg" alt="" srcset="">
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to </h1>
+        <h1><span>Md Adnan Rumman</span> world!</h1>
+        <h3>Website Developer and Data Analyst</h3>
+        <p>I would like to work as a website developer. In this connection I am starting to learn HTML first 
+        besides CSS. I can make the website interactive. Now a day data analyst expert requirement appears
+        everyday. so that I want to start learning SQL and few python framework. Apart from website developer
+        I am also a data analyst. 
+        <a href="#">HIRE ME</a>
+        </div >
+        <div class="half-width">
+            <img class="" src="showOff/my-bg.png" alt="" srcset="">
+        </div>
+        
+    </section>
+        
+</p>   
 </body>
 </html>
