--- a/index.html
+++ b/index.html
@@ -17,14 +17,27 @@
         besides CSS. I can make the website interactive. Now a day data analyst expert requirement appears
         everyday. so that I want to start learning SQL and few python framework. Apart from website developer
         I am also a data analyst. 
-        <a href="#">HIRE ME</a>
+        <a class="link-button" href="#">HIRE ME</a>
         </div >
         <div class="half-width">
             <img class="" src="showOff/my-bg.png" alt="" srcset="">
         </div>
         
     </section>
-        
+    <section class="Dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="" srcset="">
+        </div>
+        <div class="half-width">
+            <h1>Dream-big</h1>
+            <h2>Became Web Developer</h2>
+            <p>I would like to work as a website developer. In this connection I am starting to learn HTML first 
+                besides CSS. I can make the website interactive. Now a day data analyst expert requirement appears
+                everyday. so that I want to start learning SQL and few python framework. Apart from website developer
+                I am also a data analyst. </p>
+                <a class="link-button" href="#">Download My Resume</a>
+        </div>
+    </section>
 </p>   
 </body>
 </html>
