--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
                 <a class="link-button" href="#">Download My Resume</a>
         </div>
     </section>
-</p>   
+    <section class="experience">
+        <h1 class="experience-header">Experinces</h1>
+        <div class="flexible-container">
+            <div class="half-width experience-div">
+                <h1>Full Stack Web Developer</h1>
+                <h3>2021-Present|Pro level Developer</h3>
+                <p>I would like to work as a website developer. In this connection I am starting to learn HTML first 
+                    besides CSS. I can make the website interactive. Now a day data analyst expert requirement appears
+                    everyday. so that I want to start learning SQL and few python framework. Apart from website developer
+                    I am also a data analyst.</p>
+            </div>
+            <div class="half-width baby-div">
+                <h1>Baby Web Developer</h1>
+                <h4>2021-Present|Pro level Developer</h4>
+                <p>I would like to work as a website developer. In this connection I am starting to learn HTML first 
+                    besides CSS. I can make the website interactive. Now a day data analyst expert requirement appears
+                    everyday. so that I want to start learning SQL and few python framework. Apart from website developer
+                    I am also a data analyst.</p>
+            </div>
+    </div>
+    </section>  
 </body>
 </html>
