--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </section>
     <section class="experience">
         <h1 class="experience-header">Experinces</h1>
-        <div class="flexible-container">
-            <div class="half-width experience-div">
+        <div  class="flexible-container">
+            <div id="web-dev-experience" class="half-width experience-div">
                 <h1>Full Stack Web Developer</h1>
                 <h3>2021-Present|Pro level Developer</h3>
                 <p>I would like to work as a website developer. In this connection I am starting to learn HTML first 
@@ -49,7 +49,7 @@
                     everyday. so that I want to start learning SQL and few python framework. Apart from website developer
                     I am also a data analyst.</p>
             </div>
-            <div class="half-width baby-div">
+            <div id="baby-dev-experience" class="half-width baby-div">
                 <h1>Baby Web Developer</h1>
                 <h4>2021-Present|Pro level Developer</h4>
                 <p>I would like to work as a website developer. In this connection I am starting to learn HTML first 
@@ -59,5 +59,8 @@
             </div>
     </div>
     </section>  
+    <footer>
+        <p>© peter Parker 2021, a programming Hero Initiative</p>
+    </footer>
 </body>
 </html>
